fixed the bug for onclick action

--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -27,7 +27,7 @@
                       is_done
                     {% elif snippet.has_read %}
                       has_read
-                    {% endif %}
+                    {% endif %}"
               onclick="show({{ snippet.id }})">{{ snippet.user }}</div>
       {% endfor %}
       <span class="mdc-tab-bar__indicator"></span>
