--- a/snippets/templates/snippets/base.html
+++ b/snippets/templates/snippets/base.html
@@ -16,6 +16,9 @@
         margin: 0;
         padding: 0;
       }
+      .mdc-toolbar__title {
+        color: white;
+      }
       .mdc-tab {
         font-weight: bold;
         color: #222;
@@ -30,6 +33,7 @@
       }
       .snippet-card {
         margin: 0 auto;
+        margin-bottom: 16px;
         max-width: 1024px;
         padding-top: 16px;
       }
