--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-  <span class="mdc-toolbar__title">定期总结与及时沟通</span>
+  <a href="/snippets" class="mdc-toolbar__title">定期总结与及时沟通</a>
 </section>
 <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
   <a class="material-icons mdc-toolbar__icon" href="/snippets/week/{{ prev_week }}/">navigate_before</a>
