--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -28,6 +28,7 @@
                     {% elif snippet.has_read %}
                       has_read
                     {% endif %}"
+              id="snippet-tab-{{ snippet.id }}"
               onclick="show({{ snippet.id }})">{{ snippet.user }}</div>
       {% endfor %}
       <span class="mdc-tab-bar__indicator"></span>
@@ -46,7 +47,6 @@
         {{ snippet.content }}
       </section>
       <section class="mdc-card__actions">
-        <a class="mdc-button mdc-button--compact mdc-card__action" href="/snippets/read/{{ snippet.id }}/">标记为已读</a>
         <a class="mdc-button mdc-button--compact mdc-card__action" href="/snippets/done/{{ snippet.id }}/">标记为已处理</a>
       </section>
     </li>
@@ -58,6 +58,20 @@
     for (var i = 0; i < snippetCards.length; i++) {
       snippetCards[i].classList.add('snippet-card-hide');
     }
+
+    var xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+        if (xmlhttp.readyState == XMLHttpRequest.DONE) {   // XMLHttpRequest.DONE == 4
+          if (xmlhttp.status == 200) {
+            document.querySelector('#snippet-tab-' + id).classList.add('has_read');
+          } else {
+            console.log('something else other than 200 was returned');
+          }
+        }
+    };
+    xmlhttp.open('GET', '/snippets/read/' + id, true);
+    xmlhttp.send();
+
     document.querySelector('#snippet-card-' + id).classList.remove('snippet-card-hide');
   }
 </script>
