--- a/snippets/templates/snippets/name.html
+++ b/snippets/templates/snippets/name.html
@@ -13,15 +13,12 @@
 {% if snippet_list %}
 <ul id="my-tab-contents">
   {% for snippet in snippet_list %}
-    <li class="mdc-card snippet-card">
+    <li class="mdc-card snippet-card" id="snippet-card-{{ snippet.id }}">
+      <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">star</i>
       <section class="mdc-card__supporting-text snippet-content">
         第{{ snippet.week }}周:
         <br>
         {{ snippet.content }}
-      </section>
-      <section class="mdc-card__actions">
-        <a class="mdc-button mdc-button--compact mdc-card__action" href="/snippets/read/{{ snippet.id }}/">标记为已读</a>
-        <a class="mdc-button mdc-button--compact mdc-card__action" href="/snippets/done/{{ snippet.id }}/">标记为已处理</a>
       </section>
     </li>
   {% endfor %}
