--- a/snippets/templates/snippets/name.html
+++ b/snippets/templates/snippets/name.html
@@ -1,9 +1,6 @@
 {% extends "snippets/base.html" %}
 
 {% block title %}
-<section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-  <a href="/snippets" class="mdc-toolbar__title">定期总结与及时沟通</a>
-</section>
 <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
   <span class="week-indicator">{{ name }}</span>
 </section>
@@ -14,7 +11,13 @@
 <ul id="my-tab-contents">
   {% for snippet in snippet_list %}
     <li class="mdc-card snippet-card" id="snippet-card-{{ snippet.id }}">
-      <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">star</i>
+      <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">
+        {% if snippet.has_star %}
+          star
+        {% else %}
+          star_border
+        {% endif %}
+      </i>
       <section class="mdc-card__supporting-text snippet-content">
         第{{ snippet.week }}周:
         <br>
