--- a/snippets/templates/snippets/base.html
+++ b/snippets/templates/snippets/base.html
@@ -155,14 +155,14 @@
 
     function view_by_week() {
       var week = prompt("请输入第几周");
-      if (week !== null || week !== "") {
+      if (week !== null && week !== "") {
         window.location.assign('/snippets/week/' + week);
       }
     }
 
     function view_by_name() {
       var name = prompt("请输入姓名的拼音");
-      if (name !== null || name !== "") {
+      if (name !== null && name !== "") {
         window.location.assign('/snippets/name/' + name);
       }
     }
