Remove English in the template.

--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -55,7 +55,7 @@
   var tabbar = new mdc.tabs.MDCTabBarScroller(document.querySelector('#snippet-tab-bar-scroller'));
 </script>
 {% else %}
-No Snippet are available.
+骚雷，没有符合该条件的周报
 {% endif %}
 {% endblock %}
 
