Add line break to render multiple line content in correct format.

--- a/snippets/templates/snippets/base.html
+++ b/snippets/templates/snippets/base.html
@@ -41,6 +41,9 @@
       .snippet-content {
         min-height: 300px;
       }
+      .snippet-content p {
+        margin: 0;
+      }
       .snippet-card-hide {
         display: none;
       }
