--- a/snippets/templates/snippets/star.html
+++ b/snippets/templates/snippets/star.html
@@ -5,30 +5,18 @@
 
 {% block content %}
 {% if snippet_lists %}
-<div id="snippet-tab-bar-scroller" class="mdc-tab-bar-scroller">
-  <div class="mdc-tab-bar-scroller__indicator mdc-tab-bar-scroller__indicator--back">
-    <a class="mdc-tab-bar-scroller__indicator__inner material-icons" href="#" aria-label="scroll back button">
-      navigate_before
-    </a>
-  </div>
-  <div class="mdc-tab-bar-scroller__scroll-frame">
-    <nav id="my-scrollable-tab-bar" class="mdc-tab-bar mdc-tab-bar-scroller__scroll-frame__tabs">
-      {% for name, name_pinyin in users %}
-        <div class="mdc-tab has_read"
-              id="snippet-tab-{{ name_pinyin }}"
-              onclick="show('{{ name_pinyin }}')">{{ name }}</div>
-      {% endfor %}
-      <span class="mdc-tab-bar__indicator"></span>
-    </nav>
-  </div>
-  <div class="mdc-tab-bar-scroller__indicator mdc-tab-bar-scroller__indicator--forward">
-    <a class="mdc-tab-bar-scroller__indicator__inner material-icons" href="#" aria-label="scroll forward button">
-      navigate_next
-    </a>
-  </div>
+<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+  {% for name, name_pinyin in users %}
+    <button class="mdc-button has_read
+          id="snippet-tab-{{ name_pinyin }}"
+          onclick="show('{{ name_pinyin }}')">
+      {{ name }}
+    </button>
+  {% endfor %}
+</div>
 </div>
 {% for name, name_pinyin, snippet_list in snippet_lists %}
-<ul id="snippet-card-{{ name_pinyin }}" class="snippet-card snippet-card-hide">
+<ul id="snippet-card-{{ name_pinyin }}" class="snippet-card snippet-card-hide mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
   {% for snippet in snippet_list %}
     <li class="mdc-card" id="snippet-card-{{ snippet.id }}">
       <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">
