--- a/snippets/templates/snippets/name.html
+++ b/snippets/templates/snippets/name.html
@@ -8,24 +8,26 @@
 
 {% block content %}
 {% if snippet_list %}
-<ul id="my-tab-contents" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-  {% for snippet in snippet_list %}
-    <li class="mdc-card snippet-card" id="snippet-card-{{ snippet.id }}">
-      <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">
-        {% if snippet.has_star %}
-          star
-        {% else %}
-          star_border
-        {% endif %}
-      </i>
-      <section class="mdc-card__supporting-text snippet-content">
-        第{{ snippet.week }}周:
-        <br>
-        {{ snippet.content|linebreaks }}
-      </section>
-    </li>
-  {% endfor %}
-</ul>
+<div class="mdc-layout-grid__inner">
+  <ul id="my-tab-contents" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+    {% for snippet in snippet_list %}
+      <li class="mdc-card snippet-card" id="snippet-card-{{ snippet.id }}">
+        <i class="material-icons snippet-star" onclick="toogle_star({{ snippet.id }})">
+          {% if snippet.has_star %}
+            star
+          {% else %}
+            star_border
+          {% endif %}
+        </i>
+        <section class="mdc-card__supporting-text snippet-content">
+          第{{ snippet.week }}周:
+          <br>
+          {{ snippet.content|linebreaks }}
+        </section>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 {% else %}
 骚雷，没有符合该条件的周报
 {% endif %}
